<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFFFF"
    android:padding="4pt"
    >
    <ImageView
        android:id="@+id/appLogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/icon"
        android:scaleType="fitCenter"
        />
    <TextView
        android:id="@+id/appTitle"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/appLogo"
        android:layout_alignTop="@id/appLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/app_name"
        android:textSize="10pt"
        android:textStyle="bold"
        android:textColor="#ff000000"
        />
    <TextView
        android:id="@+id/version"
        android:layout_alignLeft="@id/appTitle"
        android:layout_below="@id/appTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:textSize="6pt"
        android:textColor="#ff000000"
        android:text="@string/version_label"
        android:visibility="visible"
        />
    <TextView
        android:id="@+id/author"
        android:layout_below="@id/version"
        android:layout_alignLeft="@id/appTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4pt"
        android:inputType="none"
        android:textSize="6pt"
        android:textColor="#ff000000"
        android:text="@string/author"
        />
    
    <ScrollView
        android:id="@+id/credits"
        android:layout_width="fill_parent"
        android:layout_height="34pt"
        android:layout_below="@id/appLogo"
        android:layout_marginTop="4pt"
        android:background="#f4f4ff" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:padding="2pt"
            android:text="@string/credits_text"
            android:textColor="#000000"
            android:textSize="6pt" />
    </ScrollView>
    
    <TextView
        android:id="@+id/open_source"
        android:layout_below="@id/credits"
        android:layout_alignParentLeft="true" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4pt"
        android:inputType="none"
        android:textColor="#ff000000"
        android:text="@string/open_source"
        />
    <LinearLayout
        android:id="@+id/weblinks"
        android:orientation="vertical"
        android:layout_below="@id/open_source"
        android:layout_alignParentLeft="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6pt"
        android:layout_marginBottom="6pt"
        >
        <TextView
            android:id="@+id/apache_license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="none"
            android:textSize="6pt"
            android:textColor="#ff0000cc"
            android:text="@string/apache_license"
            />
        <TextView
            android:id="@+id/google_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6pt"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="none"
            android:textSize="6pt"
            android:textColor="#ff0000cc"
            android:text="@string/google_code"
            />
        <TextView
            android:id="@+id/homepage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6pt"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="none"
            android:textSize="6pt"
            android:textColor="#ff0000cc"
            android:text="@string/app_home"
            />
    </LinearLayout>

    <Button
        android:id="@+id/agreeButton"
        android:layout_below="@id/weblinks"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_accept_license"
    />
    <Button
        android:id="@+id/doNotAgreeButton"
        android:layout_below="@id/weblinks"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_close"
    />
</RelativeLayout>