<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:baselineAligned="false"
  >
  <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginRight="2dp"
    >
    <TableRow>
      <TextView
        style="@style/SmallText"
        android:layout_marginRight="4dp"
        android:text="@string/longitude"
        android:textStyle="bold"
        android:textColor="#eeeeee"
        />
      <TextView 
        style="@style/SmallText"
        android:id="@+id/longitudeField"
        android:textColor="#ffffff"
        />
    </TableRow>
    <TableRow>
      <TextView
        style="@style/SmallText"
        android:layout_marginRight="4dp"
        android:textStyle="bold"
        android:text="@string/latitude"
        android:textColor="#eeeeee"
        />
      <TextView 
        style="@style/SmallText"
        android:id="@+id/latitudeField"
        android:textColor="#ffffff"
        />
    </TableRow>
    <TableRow>
      <TextView
        style="@style/SmallText"
        android:layout_marginRight="4dp"
        android:text="@string/altitude"
        android:textStyle="bold"
        android:textColor="#eeeeee"
        />
      <TextView 
        style="@style/SmallText"
        android:id="@+id/altitudeField"
        android:textColor="#ffffff"
        />
    </TableRow>
  </TableLayout>
  <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginLeft="2dp"
    >
    <TableRow>
      <TextView
        style="@style/SmallText"
        android:layout_marginRight="4dp"
        android:text="@string/heading"
        android:textStyle="bold"
        android:textColor="#eeeeee"
        />
      <TextView 
        style="@style/SmallText"
        android:id="@+id/headingField"
        android:textColor="#ffffff"
        />
    </TableRow>
    <TableRow>
      <TextView
        style="@style/SmallText"
        android:layout_marginRight="4dp"
        android:text="@string/speed"
        android:textStyle="bold"
        android:textColor="#eeeeee"
        />
      <TextView 
        style="@style/SmallText"
        android:id="@+id/speedField"
        android:textColor="#ffffff"
        />
    </TableRow>
    <TableRow>
      <TextView 
        style="@style/SmallText"
        android:layout_marginRight="4dp"
        android:text="@string/accuracy"
        android:textStyle="bold"
        android:textColor="#eeeeee"
        />
      <TextView 
        style="@style/SmallText"
        android:id="@+id/accuracyField"
        android:textColor="#ffffff"
        />
    </TableRow>
  </TableLayout>
</LinearLayout>
