<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Button
        style="@style/LargeText"
        android:id="@+id/selectPoint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/select_point"
        />
    <view
        class="com.custommapsapp.android.create.ImageDisplay"
        android:id="@+id/imageDisplay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/selectPoint"
        />
    <view
        class="com.custommapsapp.android.create.AnnotationLayer"
        android:id="@+id/bitmapOverlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/selectPoint"
        android:background="#00000000"
        />
    <ImageButton 
        android:id="@+id/zoomOut"
        android:layout_alignBottom="@id/imageDisplay"
        android:layout_alignLeft="@id/imageDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/zoomout"
        android:background="#00000000"
        android:contentDescription="@string/zoom_out"
        />
    <ImageButton 
        android:id="@+id/zoomIn"
        android:layout_alignBottom="@id/imageDisplay"
        android:layout_alignRight="@id/imageDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/zoomin"
        android:background="#00000000"
        android:contentDescription="@string/zoom_in"
        />
    <TextView
        style="@style/NormalText"
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:background="#C0FFFFFF"
        android:textColor="#C0000000"
        android:text="@string/image_point_select_for_matching"
        />
</RelativeLayout>