<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mapviewholder"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mapviewlocation"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/sliders"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/transparencyPanel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/transparencyLabel"
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/geo_point_transparency" />

                <SeekBar
                    android:id="@+id/transparencyBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:max="100"
                    android:progress="0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/scalePanel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/scaleLabel"
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/geo_point_scale" />

                <SeekBar
                    android:id="@+id/scaleBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:max="30"
                    android:progress="0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rotatePanel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/rotateLabel"
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/geo_point_rotate" />

                <SeekBar
                    android:id="@+id/rotateBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:max="360"
                    android:progress="180" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/mapmode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_mapmode" />

            <Button
                android:id="@+id/selectPoint"
                style="@style/SmallText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_accept" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>